change advance and previous buttons

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <!-- Need to add babyas website link here-->
     <img src="images/logobasinverted.png" alt="BabyAsLogo" class="center">
 
-        <h1 style="text-align: center" style="font-size: 100em">One of Nashville's Finest Barbeque!</h1>
+        <h1 style="text-align: center">One of Nashville's Finest Barbeque!</h1>
 
        <!-- Slideshow container -->
 <div class="slideshow-container">
