font size update

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <title>BabyAs</title>
         <link rel="stylesheet" href="css/style.css">
         <meta name=”viewport” content=”width=device-width, initial-scale=1″>
+        <link href="https://fonts.googleapis.com/css?family=Aclonica|Courgette&display=swap" rel="stylesheet">
     </head>
+    <body>
         <!-- Need to add babyas website link here-->
     <img src="images/logobasinverted.png" alt="BabyAsLogo" class="center">
 
