--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
       <script type="text/javascript" src="js/slideshow.js"></script>
 
-      <div class="btn-group" style="width: 100%">
+      <div class="btn-group" style="width: 100vw">
         <button style="width: 50%">Menu</button>
         <button style="width: 50%">About</button>
       </div>
