--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>BabyAs</title>
         <link rel="stylesheet" href="css/style.css">
-        <meta name=”viewport” content=”width=device-width, initial-scale=1″>
+        <meta name="viewport" content="width=device-width, initial-scale=0.41, maximum-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Aclonica|Courgette&display=swap" rel="stylesheet">
     </head>
     <body>
