added: menu, centering, and link to and from menu to homepage

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <script type="text/javascript" src="js/slideshow.js"></script>
 
       <div class="btn-group" style="width: 100vw">
-        <button style="width: 50%">Menu</button>
+        <a href="index_2.html"><button style="width: 50%">Menu</button></a>
         <button style="width: 50%">About</button>
       </div>
       
