added meta tags, and backup fonts

--- a/index_2.html
+++ b/index_2.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>BabyAs|Menu</title>
+        <meta charset="UTF-8">
+        <meta name="description" content="Barbecue Restruant Website">
+        <meta name="keywords" content="Barbecue,Menu,Contact,Catering">
+        <meta name="author" content="Joe Warpool">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style_menu.css">
-        <meta name="viewport" content="width=device-width, initial-scale=0.41, maximum-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Aclonica|Courgette&display=swap" rel="stylesheet">
     </head>
     <body>
