--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Barbecue Restruant Website">
         <meta name="keywords" content="Barbecue,Menu,Contact,Catering">
         <meta name="author" content="Joe Warpool">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=.5">
         <link rel="stylesheet" href="css/style.css">
         <link href="https://fonts.googleapis.com/css?family=Aclonica|Courgette&display=swap" rel="stylesheet">
     </head>
@@ -57,6 +57,7 @@
         <span class="dot" onclick="currentSlide(3)"></span>
         <span class="dot" onclick="currentSlide(4)"></span>
       </div>
+      
       <script type="text/javascript" src="js/slideshow.js"></script>
 
       <div class="btn-group" style="width: 100vw">
