seperated footer from h2

--- a/index_2.html
+++ b/index_2.html
@@ -93,8 +93,8 @@
     </body>
 
     <footer>
-      <h2>Contact Us</h2>
-      <p>Phone: 615-268-8755 or Email: babyabbq@yahoo.com</p>
+      <h6>Contact Us</h6>
+      <p class="second">Phone: 615-268-8755 or Email: babyabbq@yahoo.com</p>
     </footer>
 
         
