email and footer change

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="description" content="Barbecue Restruant Website">
         <meta name="keywords" content="Barbecue,Menu,Contact,Catering">
+        <meta name="Owner/Chef" content="Carey Austin">
         <meta name="author" content="Joe Warpool">
         <meta name="viewport" content="width=device-width, initial-scale=.5">
         <link rel="stylesheet" href="css/style.css">
@@ -69,7 +70,7 @@
 
     <footer>
       <h2>Contact Us</h2>
-      <p>Phone: 615-268-8755 or Email: babyabbq@yahoo.com</p>
+      <p>Phone: 615-268-8755 or Email: Austin14llc@yahoo.com</p>
     </footer>
 
         
