--- a/index_2.html
+++ b/index_2.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="description" content="Barbecue Restruant Website">
         <meta name="keywords" content="Barbecue,Menu,Contact,Catering">
+        <meta name="Owner/Chef" content="Carey Austin">
         <meta name="author" content="Joe Warpool">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style_menu.css">
@@ -54,6 +55,7 @@
          </div>
 
          <h3>Sides</h3>
+
          <div class="list_wrapper">
              <ul>
                  <li>
@@ -94,7 +96,7 @@
 
     <footer>
       <h6>Contact Us</h6>
-      <p class="second">Phone: 615-268-8755 or Email: babyabbq@yahoo.com</p>
+      <p class="second">Phone: 615-268-8755 or Email: Austin14llc@yahoo.com</p>
     </footer>
 
         
