--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
       <div class="btn-group" style="width: 100vw">
         <a href="index_2.html"><button style="width: 50%">Menu</button></a>
-        <button style="width: 50%">About</button>
+        <a href="index_3.html"><button style="width: 50%">About</button></a>
       </div>
       
     </body>
