--- a/index_2.html
+++ b/index_2.html
@@ -89,7 +89,7 @@
         
         <div class="btn-group" style="width: 100vw">
            <a href="index.html"><button style="width: 50%" href="">BabyAs</button></a>
-            <button style="width: 50%">About</button>
+           <a href="index_3.html"><button style="width: 50%">About</button></a>
         </div>
       
     </body>
