--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>BabyAs</title>
         <meta charset="UTF-8">
-        <meta name="description" content="Barbecue Restruant Website">
+        <meta name="description" content="Barbecue Restaurant Website">
         <meta name="keywords" content="Barbecue,Menu,Contact,Catering">
         <meta name="Owner/Chef" content="Carey Austin">
         <meta name="author" content="Joe Warpool">
@@ -15,7 +15,7 @@
         <!-- Need to add babyas website link here-->
     <img src="images/logobasinverted.png" alt="BabyAsLogo" class="center">
 
-        <h1 style="text-align: center">One of Nashville's Finest Barbeque!</h1>
+        <h1 style="text-align: center"> Nashville's Finest Smoke Barbeque!</h1>
 
        <!-- Slideshow container -->
 <div class="slideshow-container">
