--- a/index_2.html
+++ b/index_2.html
@@ -3,7 +3,7 @@
     <head>
         <title>BabyAs|Menu</title>
         <meta charset="UTF-8">
-        <meta name="description" content="Barbecue Restruant Website">
+        <meta name="description" content="Barbecue Restaurant Website">
         <meta name="keywords" content="Barbecue,Menu,Contact,Catering">
         <meta name="Owner/Chef" content="Carey Austin">
         <meta name="author" content="Joe Warpool">
