--- a/Index_3.html
+++ b/Index_3.html
@@ -3,20 +3,35 @@
     <head>
         <title>BabyAs</title>
         <meta charset="UTF-8">
-        <meta name="description" content="Barbecue Restruant Website">
-        <meta name="keywords" content="Barbecue,Menu,Contact,Catering">
+        <meta name="description" content="Barbeque Restaurant Website">
+        <meta name="keywords" content="Barbeque,Barbecue,Menu,Contact,Catering">
         <meta name="Owner/Chef" content="Carey Austin">
         <meta name="author" content="Joe Warpool">
         <meta name="viewport" content="width=device-width, initial-scale=.5">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style_about.css">
         <link href="https://fonts.googleapis.com/css?family=Aclonica|Courgette&display=swap" rel="stylesheet">
     </head>
     <body>
         <!-- Need to add babyas website link here-->
     <img src="images/logobasinverted.png" alt="BabyAsLogo" class="center">
 
-        <h1 style="text-align: center">One of Nashville's Finest Barbeque!</h1>
+      <h1>Nashville's Finest Smoke Barbeque!</h1>
+      <h2>Business Info</h2>
 
+      <div class="info_a">
+        <p class="name">Austin's LLC</p>
+        <p class="address">124 Antioch Wood Way<br>Antioch, TN 37013</p>
+        <p class="contact_info">Phone (615) 615-268-8755<br>Email: caraust5@yahoo.com</p>
+      </div>
+
+      <h3>About the Owner</h3>
+
+      <div class="info_b">
+        <p class="owner">Carey Austin</p>
+        <p class="experience">Carey has five years of experience in cooking barbeque.Before starting his own business in being the best at smoking barbeque,
+        he had spent four years in restaurants, and had an additional two years of restaurant management experience to hone his craft.
+        Overall, he has twenty years of experience in management.</p>
+      </div>
 
 
       <div class="btn-group" style="width: 100vw">
