--- a/index_3.html
+++ b/index_3.html
@@ -33,6 +33,8 @@
         Overall, he has twenty years of experience in management.</p>
       </div>
 
+      <img src="images/New Trailer.jpg" alt="BabyAs Truck" class="center">
+
 
       <div class="btn-group" style="width: 100vw">
         <a href="index.html"><button style="width: 50%">BabyAs</button></a>
