--- a/index_3.html
+++ b/index_3.html
@@ -29,7 +29,7 @@
       <div class="info_b">
         <p class="owner">Carey Austin</p>
         <p class="experience">Carey has five years of experience in cooking barbeque.Before starting his own business in being the best at smoking barbeque,
-        he had spent four years in restaurants, and had an additional two years of restaurant management experience to hone his craft.
+        he worked in restaurants for four years, and in restaurant management for two years.
         Overall, he has twenty years of experience in management.</p>
       </div>
 
